Massive commit with many stuff. I have most stuff working. But there are still a lot to do. Checking of input / checking of response from API etc

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,10 +40,10 @@
         android:text="@string/buttonSearch" />
 
     <TextView
-        android:text="TextView"
+        android:text="@string/textLabelNoFavorites"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/textFavoritesTitle" />
 
     <ListView
         android:layout_width="match_parent"
