--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -25,13 +25,13 @@
         app:srcCompat="@android:drawable/ic_menu_gallery"
         android:layout_below="@+id/textCurrentLocation"
         android:layout_centerHorizontal="true"
-        android:id="@+id/imageView" />
+        android:id="@+id/imageLargeWeather" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/imageLargeWeather"
         android:layout_centerHorizontal="true"
         android:id="@+id/textTemperature" />
 
