--- a/app/src/main/res/layout/weather_list_row.xml
+++ b/app/src/main/res/layout/weather_list_row.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
         app:srcCompat="@android:drawable/ic_menu_gallery"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/imageWeather" />
+        android:id="@+id/imageWeather"
+        android:layout_height="40dp" />
 
     <TextView
         android:text="TextView"
@@ -23,7 +23,9 @@
         android:layout_toRightOf="@+id/imageWeather"
         android:layout_toEndOf="@+id/imageWeather"
         android:layout_width="wrap_content"
-        android:layout_alignParentLeft="false" />
+        android:layout_alignParentLeft="false"
+        android:textStyle="normal|bold"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:text="TextView"
@@ -32,7 +34,8 @@
         android:layout_below="@+id/textHour"
         android:id="@+id/textWeather"
         android:layout_toLeftOf="@+id/textTemperature"
-        android:layout_toEndOf="@+id/imageWeather" />
+        android:layout_toEndOf="@+id/imageWeather"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:text="TextView"
@@ -41,5 +44,6 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/textTemperature" />
+        android:id="@+id/textTemperature"
+        android:layout_marginRight="10dp" />
 </RelativeLayout>
