--- a/app/src/main/res/layout/activity_city_weather.xml
+++ b/app/src/main/res/layout/activity_city_weather.xml
@@ -1,45 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_city_weather"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.group32.homework05.CityWeatherActivity">
 
-    <TextView
-        android:text="@string/txtview_label_current_location"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewLabelCurrentLocation" />
+        android:id="@+id/tabLayout"
+        app:tabMaxWidth="2000dp"
+        android:background="@android:color/darker_gray">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textViewLabelCurrentLocation"
-        android:layout_toRightOf="@+id/textViewLabelCurrentLocation"
-        android:layout_marginStart="15dp"
-        android:id="@+id/txtViewDataCurrentLocation"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:text="TextView"
-        android:textStyle="normal|bold" />
+        <android.support.design.widget.TabItem
+            android:layout_height="wrap_content"
+            android:text="@string/hourlyDataTabLabel" />
 
-    <View android:id="@+id/separator"
-        android:background="@android:color/darker_gray"
-        android:layout_width = "wrap_content"
-        android:layout_height="1dp"
-        android:layout_alignBottom="@+id/textViewLabelCurrentLocation"/>
+    </android.support.design.widget.TabLayout>
 
-    <ListView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/listHourlyWeather"
-        android:layout_marginTop="30dp" />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/tabLayout">
+
+        <TextView
+            android:text="@string/txtview_label_current_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewLabelCurrentLocation" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textViewLabelCurrentLocation"
+            android:layout_toRightOf="@+id/textViewLabelCurrentLocation"
+            android:layout_marginStart="15dp"
+            android:id="@+id/txtViewDataCurrentLocation"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:text="TextView"
+            android:textStyle="normal|bold" />
+
+        <View android:id="@+id/separator"
+            android:background="@android:color/darker_gray"
+            android:layout_width = "wrap_content"
+            android:layout_height="1dp"
+            android:layout_alignBottom="@+id/textViewLabelCurrentLocation"/>
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/listHourlyWeather"
+            android:layout_marginTop="30dp" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
