--- a/app/src/main/res/layout/activity_city_weather.xml
+++ b/app/src/main/res/layout/activity_city_weather.xml
@@ -16,6 +16,7 @@
 
         <android.support.design.widget.TabItem
             android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:text="@string/hourlyDataTabLabel" />
 
     </android.support.design.widget.TabLayout>
